# PaperFT8

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/M5GFX/: CMakeLists.txt  README.md  library.json  library.properties
components/M5GFX/src/: M5AtomDisplay.h  M5GFX.cpp  M5GFX.h  (+8 more)
components/M5Unified/: CMakeLists.txt  LICENSE  README.md  library.json  library.properties
components/ft8_lib/: CMakeLists.txt
components/ft8_lib/common/: audio.c  audio.h  fft_wrapper.c  fft_wrapper.h  monitor.c  monitor.h  stpcpy_compat.c  stpcpy_compat.h  wave.c  wave.h
components/ft8_lib/ft8/: constants.c  constants.h  crc.c  crc.h  debug.h  decode.c  decode.h  encode.c  encode.h  ldpc.c  ldpc.h  message.c  message.h  text.c  text.h
components/ui/: CMakeLists.txt  mic_input.cpp  mic_input.h  ter_u20b_lvgl.c  ter_u20b_lvgl.h  ui.cpp
docs/: AUTOSEQ_ARCHITECTURE.md  FT8 Free-Text Reference Extension.md  Mini-FT8_Diagram.txt  RTC_COMPENSATION.md
host_mock/: .gitignore  Makefile  esp_err.h  esp_log.h  host_main.cpp  host_mocks.cpp  host_mocks.h  json_parser.cpp  json_parser.h  test_beacon.json  test_fd_exchange.json  test_fd_signoff_reentry.json  test_fd_signoff_retry.json  test_fd_touch.json  test_qso.json  test_report_deadlock.json
main/: CMakeLists.txt  autoseq.cpp  autoseq.h  idf_component.yml  main.cpp  mic_selftest.cpp  mic_selftest.h  resample.cpp  resample.h  stream_mic.cpp  stream_mic.h  stream_uac.cpp  stream_uac.h
release/: flash.ps1  flash.sh  readme.Ubuntu.txt
tools/: check_rtc.py  pc_terminal.py  set_rtc_sleep.py  writebin.py
(+124 files in other folders)
